src/ui.css
* {
  color: rgba(0,0,0,.8);
  font-family: Inter, sans-serif;
  font-size: 11px;
}

.input-field {
  display: flex;
  align-items: center;
  margin: 20px 8px;
}

label, input {
  flex: 1
}

output {
  width: 25px;
  margin-left: 12px;
  position: relative;
  cursor: pointer;
  user-select: none;
}

output:active {
  opacity: 0.7;
}

input[type=range] {
  -webkit-appearance: none;
  width: 100%;
  background: transparent;
}

input[type=range]:focus {
  outline: none;
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  height: 9px;
  width: 9px;
  border-radius: 100%;
  background: #050505;
  cursor: pointer;
 }

input[type=range]::-moz-range-thumb {
  height: 9px;
  width: 9px;
  border-radius: 100%;
  background: #050505;
  cursor: pointer;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 1px;
  cursor: pointer;
  background: #B4B4B4;
 }

input[type=range]::-moz-range-track {
  width: 100%;
  height: 1px;
  cursor: pointer;
  background: #B4B4B4;
}

input[type=range]:focus::-webkit-slider-runnable-track {
  background: #828282;
}

